--- a/#src/_header-index.html
+++ b/#src/_header-index.html
@@ -1,7 +1,7 @@
 <section class="sale">
-	<div class="sale__descp">
+	<a href="#" class="sale__descp">
 
-	</div>
+	</a>
 </section>
 
 <header id="header-top" class="header-top header-top-index">
