--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -3,7 +3,7 @@
 		<div class="footer__row d-flex">
 
 			<div class="footer__col footer__col_forms">
-				<h3>Подпишитесь на нашу рассылку!</h3>
+				<h3>Подпишитесь <br> на нашу рассылку!</h3>
 
 				<form action="#" class="footer__forms d-flex">
 					<input type="email" placeholder="E-mail" name="email" class="input">
@@ -12,7 +12,7 @@
 
 				<div class="header__callback callback d-flex">
 					<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
-					<a href="#" class="callback__popup">Заказать обратный звонок</a>
+					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
 				</div>
 
 				<p class="footer__info-text">
@@ -45,6 +45,13 @@
 					<li><a href="#">Бренды</a></li>
 					<li><a href="#">Гарантия</a></li>
 				</ul>
+				<div class="footer__social-network">
+					<p class="footer__social-network-text">СОЦИАЛЬНЫЕ СЕТИ</p>
+					<div class="footer__social-network-block">
+						<a href="#" class="footer__social-network-link social-network-link-01"></a>
+						<a href="#" class="footer__social-network-link social-network-link-02"></a>
+					</div>
+				</div>
 			</div>
 
 			<div class="footer__col">
@@ -54,26 +61,13 @@
 					<li><a href="#">Контакты</a></li>
 					<li><a href="#">Политика конфиденциальности</a></li>
 				</ul>
+				<div class="footer__payment-methods">
+					<p class="footer__payment-methods-text">Способы оплаты</p>
+					<div class="footer__payment-methods-img">
+						<img src="img/mir.jpg" alt="">
+					</div>
+				</div>
 			</div>
-
 		</div>
 	</div>
 </footer>
-
-<!-- <footer id="footer-bot" class="footer-bot">
-	<div class='_container'>
-		<div class="footer-bot__row d-flex">
-
-			<div class="footer-bot__item d-flex">
-				<p>Способы оплаты</p>
-				<img src="img/mir.jpg" alt="">
-			</div>
-
-			<div class="footer-bot__item d-flex">
-				<p>Социальные сети</p>
-				<img src="img/social.jpg" alt="">
-			</div>
-
-		</div>
-	</div>
-</footer> -->
