--- a/#src/_header-index.html
+++ b/#src/_header-index.html
@@ -36,13 +36,15 @@
 				</div>
 				<button class="mob-search"></button>
 
-				<div class="header__callback callback d-flex">
-					<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
-					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
-				</div>
+				<div class="header__contacts d-flex">
+					<div class="header__callback callback d-flex">
+						<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
+						<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
+					</div>
 
-				<a href="#" class="header__favorites">Избранное</a>
-				<a href="#" class="header__bascket">Корзина</a>
+					<a href="#" class="header__favorites">Избранное</a>
+					<a href="#" class="header__bascket">Корзина</a>
+				</div>
 
 			</div>
 
