--- a/light_market-new/product.html
+++ b/light_market-new/product.html
@@ -52,19 +52,23 @@
 			<a href="#" class="header__logo logo-icon"></a>
 
 			<div class="header__middle d-flex">
+
 				<div class="header__search search">
 					<input type="text" placeholder="Поиск по сайту" class="search__input input">
 					<button type="submit" tabindex="2" id="searchsubmit" class="sub-search search__btn" value=""></button>
 				</div>
 				<button class="mob-search"></button>
 
-				<div class="header__callback callback d-flex">
-					<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
-					<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
+				<div class="header__contacts d-flex">
+					<div class="header__callback callback d-flex">
+						<p><a href="tel:88007006045" class="callback__phone">8 (800) 700-60-45</a></p>
+						<a href="#callback" class="callback__popup _popup-link">Заказать обратный звонок</a>
+					</div>
+
+					<a href="#" class="header__favorites">Избранное</a>
+					<a href="#" class="header__bascket">Корзина</a>
 				</div>
 
-				<a href="#" class="header__favorites">Избранное</a>
-				<a href="#" class="header__bascket">Корзина</a>
 
 			</div>
 
