--- a/#src/_header-index.html
+++ b/#src/_header-index.html
@@ -1,12 +1,6 @@
 <section class="sale ticker">
 	<a href="#" class="sale__link tickerInline">
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
-		<p class="sale__link-text">СКИДКИ ДО 85%</p>
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
-		<p class="sale__link-text">СКИДКИ ДО 85%</p>
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
-		<p class="sale__link-text">СКИДКИ ДО 85%</p>
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<img src="img/sale-banner.jpg" alt="">
 	</a>
 </section>
 
