--- a/light_market-new/product.html
+++ b/light_market-new/product.html
@@ -22,13 +22,14 @@
 	<div class="wrapper">
 		<section class="sale ticker">
 	<a href="#" class="sale__link tickerInline">
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<img src="img/sale-banner.jpg" alt="">
+		<!-- <p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
 		<p class="sale__link-text">СКИДКИ ДО 85%</p>
 		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
 		<p class="sale__link-text">СКИДКИ ДО 85%</p>
 		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
 		<p class="sale__link-text">СКИДКИ ДО 85%</p>
-		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p>
+		<p class="sale__link-text">ЛЕТНЯЯ РАСПРОДАЖА</p> -->
 	</a>
 </section>
 
