Строка поиска на мобилках

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -112,6 +112,6 @@
 	<form role="search" method="get" action="<?php echo home_url( '/' ) ?>" id="searchform" class="search__form">
 		<input type="text" class="search__input input" placeholder="Поиск" value="<?php echo get_search_query() ?>" name="s"
 			id="s">
-		<button type="submit" id="searchsubmit" class="search__btn" tabindex="2" value=""></button>
+		<button type="submit" id="searchsubmit" class="sub-search search__btn" tabindex="2" value=""></button>
 	</form>
 </div>
